# X11-GUI

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  meson.build  meson_options.txt  xgui.cpp  xgui.h
cmake/: FindXCB.cmake
headers/: application.h  button.h  label.h  layout.h  listview.h  painter.h  textinput.h  typedefs.h  widget.h
include/: application.h  button.h  checkbox.h  color.h  font.h  impl.h  label.h  layout.h  listview.h  painter.h  rect.h  server.h  textinput.h  typedefs.h  widget.h  xgui.h
libs/: impl.h  xlib.cpp  xlib.h  xlibpainter.cpp  xlibpainter.h
libs/sfml/: sfml.cpp  sfml.h  sfmlpainter.cpp  sfmlpainter.h
libs/xcb/: xcb.cpp  xcb.h  xcbft.cpp  xcbft.h  xcbpainter.cpp  xcbpainter.h
libs/xlib/: xlib.cpp  xlib.h  xlibpainter.cpp  xlibpainter.h
sources/: application.cpp  button.cpp  label.cpp  layout.cpp  listview.cpp  main.cpp  painter.cpp  textinput.cpp  typedefs.cpp  widget.cpp
src/: application.cpp  button.cpp  checkbox.cpp  color.cpp  font.cpp  label.cpp  layout.cpp  listview.cpp  painter.cpp  server.h  textinput.cpp  typedefs.cpp  widget.cpp
